# HW-HTTP-server

./: README.md  pyproject.toml
.github/workflows/: http-server.yml
src/: application.py  httpd.py
tests/: test_functional.py
